Correction Text contrast

--- a/style.css
+++ b/style.css
@@ -831,6 +831,7 @@ h4 {
 }
 
 .text-dark-footer {
+    font-size: 15px;
     color: black;
 }
 
